# manim-storyline

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
examples/: example1.py
src/manim_storyline/: __init__.py  config.py  storyline.py  transition.py
tests/: test_transition.py
