[project]
name = "manim-storyline"
version = "0.1.0"
description = "Build dynamic transitions between 'scenes' in Manim."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

# [project.entry-points."manim.plugins"]
# name="manim-storyline"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "D", # pydocstyle
    "E", # pycodestyle error
    "W",  # pycodestyle warning
]
ignore = [
    "D102", # public method docstring
    "D104", # package docstring
    "D105", # magic method docstring
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.12"
files = ["src"]
show_error_codes = true
pretty = true
strict = true
exclude_gitignore = true
